[package]
name = "newver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
serde = "1.0.160"
serde_json = "1.0.96"
chrono = "0.4.24"
reqwest = { version = "0.11.16", features = ["blocking", "json", "serde_json"] }
clap = { version = "4.2.1", features = ["derive"] }
